[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.66", features = [ "backtrace" ] }
axum = "0.6.1"
bitcoin = { version = "0.29.2", features = [ "serde" ] }
futures = "0.3"
macaroon = "0.3.0"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
test-utils = { path = "../test-utils" }
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11", default-features = false }

[lib]
doctest = false
