[package]
name = "bitcoind"
version = "0.1.0"
edition = "2021"

[dependencies]
settings = { path = "../settings" }
bitcoin = "0.29.2"
lightning = { version = "0.0.112", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.112", features = [ "rpc-client" ] }
tokio = { version = "1", features = [ "full" ] }
serde_json = { version = "1.0" }
base64 = "0.20.0"

[lib]
doctest = false
