[package]
name = "bitcoind"
version = "0.1.0"
edition = "2021"

[dependencies]
settings = { path = "../settings" }
bitcoin = "0.29.2"
lightning = { version = "0.0.113", features = ["max_level_trace"] }
lightning-block-sync = { version = "0.0.113", features = [ "rpc-client" ] }
tokio = { version = "1", features = [ "full" ] }
serde_json = { version = "1.0" }
base64 = "0.21.0"
log = { version = "0.4" }
anyhow = { version = "1.0.68", features = [ "backtrace" ] }

[lib]
doctest = false
