[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
logger = { path = "../logger" }
settings = { path = "../settings" }
lightning = { version = "0.0.112", features = ["max_level_trace", "_test_utils"] }
bitcoin = "0.29.2"
bitvec = "1.0.1"
tokio = { version = "1", features = [ "full" ] }
tokio-postgres = { version = "0.7.7", features = ["runtime", "with-bit-vec-0_6", "with-uuid-0_8"] }
log = { version = "0.4", features = ["std"] }
rust-s3 = { version = "0.32.3", features =  ["no-verify-ssl" ] }
aes-gcm-siv = { version = "0.11.1" }
crypto-common = { version = "0.1.6", features = ["rand_core"] }
anyhow = "1.0.66"
refinery = { version = "0.8.6", features = [ "tokio-postgres" ] }
bdk = "0.24.0"

[dev-dependencies]
test-utils = { path = "../test-utils" }
bitcoind = { path = "../bitcoind" }
