[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
logger = { path = "../logger" }
settings = { path = "../settings" }
lightning = { version = "0.0.114", features = ["max_level_trace", "_test_utils"] }
bitcoin = "0.29.2"
bitvec = "1.0.1"
tokio = { version = "1", features = [ "full" ] }
tokio-postgres = { version = "0.7.7", features = ["runtime", "with-bit-vec-0_6", "with-uuid-0_8"] }
postgres-openssl = "0.5.0"
openssl = "0.10.48"
log = { version = "0.4", features = ["std"] }
anyhow = "1.0.69"
refinery = { version = "0.8.7", features = [ "tokio-postgres" ] }
bdk = { git = "https://github.com/JosephGoulden/bdk", branch = "backport-begin-batch-result" }
serde_json = { version = "1.0" }
async-trait = "0.1.67"

[dev-dependencies]
test-utils = { path = "../test-utils" }
once_cell = "1.17.1"
futures = "0.3"

[lib]
doctest = false


