[package]
name = "kld"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kld"
path = "src/main.rs"

[[bin]]
name = "kld-cli"
path = "src/cli/main.rs"

[lib]
doctest = false

[dependencies]
api = { path = "../api" }

lightning = { version = "0.0.118", features = ["max_level_trace", "_test_utils"] }
lightning-block-sync = { version = "0.0.118", features = [ "rpc-client" ] }
lightning-invoice = "0.26.0"
lightning-net-tokio = "0.0.118"
lightning-background-processor = { version = "0.0.118", features = [ "futures" ] }
lightning-rapid-gossip-sync = "0.0.118"
ldk-lsp-client = { git = "https://github.com/kuutamolabs/ldk-lsp-client", branch = "kuutamo" }

macaroon = "0.3.0"
bitcoin = "0.29.2"
bitcoincore-rpc-json = "0.16.0"
rust-bip39 = "1.0.0"
base64 = "0.21.4"
bdk = { git = "https://github.com/kuutamolabs/bdk", branch = "0.28.2-allow-begin-match-fail", features = [ "electrum" ] }
anyhow = { version = "1.0.71", features = [ "backtrace" ] }
futures = "0.3"
rand = "0.8.5"
log = { version = "0.4", features = ["std"] }
tokio = { version = "1", features = [ "full" ] }
prometheus = "0.13.2"
hyper = { version = "1.0.1", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
axum = { version = "0.6.20", features = ["ws", "headers"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
tower-http = { version = "0.4.4", features = [ "cors" ] }
async-trait = "0.1.73"
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = [ "blocking", "native-tls", "json", "stream", "multipart" ] }
thiserror = "1.0"
uuid = { version = "1.5.0", features = [ "v4", "fast-rng" ] }
time = "0.3.29"
hex = "0.4.3"

# database
bitvec = "1.0.1"
tokio-postgres = { version = "0.7.9", features = ["runtime", "with-bit-vec-0_6", "with-uuid-1", "with-time-0_3"] }
postgres-openssl = "0.5.0"
postgres-types = { version = "0.2.5", features = [ "derive" ] }
openssl = "0.10.57"
refinery = { version = "0.8.11", features = [ "tokio-postgres" ] }

# paperclip generated
tokio-util = { version = "0.7.10", features = ["codec"] }
http = "0.2"
serde_yaml = "0.9"
lazy_static = "1.4"
bytes = "1.5"
mime = { git = "https://github.com/hyperium/mime" }
url = "2.4"
serde_derive = "1"

[dev-dependencies]
test-utils = { path = "../test-utils" }
criterion = { version = "0.5.1", features = ["async_tokio"] }
bincode = "1.3.3"

[build-dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
paperclip = { version = "0.8", features = ["v2", "codegen"] }
