[package]
name = "kld"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "kld"
path = "src/kld/main.rs"

[[bin]]
name = "kld-cli"
path = "src/cli/main.rs"

[lib]
doctest = false

[dependencies]
lightning = { version = "0.0.121", features = ["max_level_trace", "_test_utils"] }
lightning-block-sync = { version = "0.0.121", features = [ "rpc-client" ] }
lightning-invoice = "0.29.0"
lightning-net-tokio = "0.0.121"
lightning-background-processor = { version = "0.0.121", features = [ "futures" ] }
lightning-rapid-gossip-sync = "0.0.122"
lightning-liquidity = "0.1.0-alpha.2"

macaroon = "0.3.0"
bitcoin = "0.32.2"
bitcoincore-rpc-json = "0.17.0"
bitcoin_hashes = "0.12.0"
chrono = "0.4.38"
base64 = "0.22.1"
bdk = { git = "https://github.com/kuutamolabs/bdk", branch = "0.29.0-allow-begin-match-fail", features = [ "electrum", "all-keys" ] }
anyhow = { version = "1.0.81", features = [ "backtrace" ] }
futures = "0.3"
rand = "0.8.5"
log = { version = "0.4", features = ["std"] }
tokio = { version = "1", features = [ "full" ] }
prometheus = "0.13.4"
hyper = { version = "0.14.27", features = [ "full" ] }
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
axum = { version = "0.6.20", features = ["ws", "headers"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
tower-http = { version = "0.4.4", features = [ "cors" ] }
async-trait = "0.1.79"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.11", features = [ "blocking", "native-tls", "json", "stream", "multipart" ] }
thiserror = "1.0"
uuid = { version = "1.8.0", features = [ "v4", "fast-rng" ] }
time = "0.3.29"
hex = "0.4.3"

# database
bitvec = "1.0.1"
tokio-postgres = { version = "0.7.9", features = ["runtime", "with-bit-vec-0_6", "with-uuid-1", "with-time-0_3"] }
postgres-openssl = "0.5.0"
postgres-types = { version = "0.2.5", features = [ "derive" ] }
openssl = "0.10.64"
refinery = { version = "0.8.14", features = [ "tokio-postgres" ] }

# paperclip generated
tokio-util = { version = "0.7.10", features = ["codec"] }
http = "0.2"
serde_yaml = "0.9"
lazy_static = "1.4"
bytes = "1.6"
mime = { git = "https://github.com/hyperium/mime" }
url = "2.5"
serde_derive = "1"

[dev-dependencies]
test-utils = { path = "../test-utils" }
criterion = { version = "0.5.1", features = ["async_tokio"] }
bincode = "1.3.3"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
paperclip = { version = "0.8", features = ["v2", "codegen"] }
