[package]
name = "mgr"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "kld-mgr"
path = "src/main.rs"

[workspace]

[dependencies]
anyhow = "1.0.72"
log = { version = "0.4", features = ["std"] }
serde_json = "1.0.102"
serde_derive = "1.0.154"
# FIXME use github version for toml support
format_serde_error = { version = "0.3.0", features = [ "colored", "serde_json" ], default-features = false, git = "https://github.com/AlexanderThaller/format_serde_error" }
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.5"
tempfile = "3"
ctrlc = { version = "3.4", features = ["termination"] }
nix = "0.26.2"
regex = "1"
clap = { version = "4.3.12", features = ["derive", "env"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.16", features = ["blocking"], default-features = false }
url = { version = "2.0", features = ["serde"] }
base64 = "0.21.0"
toml-example = { version = "0.10.0", default-features = false }
x509-parser = "0.15.0"
slice_as_array = "1.1.0"
