[package]
name = "mgr"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "kld-mgr"
path = "src/main.rs"

[workspace]

[dependencies]
anyhow = "1.0.75"
log = { version = "0.4", features = ["std"] }
serde_json = "1.0.108"
serde_derive = "1.0.154"
# FIXME use github version for toml support
format_serde_error = { version = "0.3.0", features = [ "colored", "serde_json" ], default-features = false, git = "https://github.com/AlexanderThaller/format_serde_error" }
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
tempfile = "3"
ctrlc = { version = "3.4", features = ["termination"] }
nix = "0.27.1"
regex = "1"
clap = { version = "4.4.8", features = ["derive", "env"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["blocking"], default-features = false }
url = { version = "2.4", features = ["serde"] }
base64 = "0.21.5"
toml-example = { version = "0.10.0", default-features = false }
x509-parser = "0.15.1"
slice_as_array = "1.1.0"
rand = "0.8.5"
rust-bip39 = "1.0.0"
bitcoin = "0.29.2"
macaroon = "0.3.0"
hex = "0.4.3"
