[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
logger = { path = "../logger" }
settings = { path = "../settings" }
lightning = { version = "0.0.111", features = ["max_level_trace"] }
bitcoin = "0.29.0"
tokio = { version = "1", features = [ "full" ] }
log = { version = "0.4", features = ["std"] }
rust-s3 = { version = "0.32.3", features =  ["blocking", "no-verify-ssl" ] }
aes-gcm-siv = { version = "0.11.1" }
crypto-common = { version = "0.1.6", features = ["rand_core"] }

[dev-dependencies]
test-utils = { path = "../test-utils" }
