[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.69", features = [ "backtrace" ] }
settings = { path = "../settings" }
lightning = { version = "0.0.114", features = [ "max_level_trace" ] }
lightning-block-sync = { version = "0.0.114", features = [ "rpc-client" ] }
bitcoin = "0.29.2"
rand = "0.8.5"
base64 = "0.21.0"
reqwest = { version = "0.11", default-features = false, features = [ "blocking", "native-tls" ] }
tokio-postgres = { version = "0.7.7", features = ["runtime", "with-bit-vec-0_6", "with-uuid-0_8"] }
postgres-openssl = "0.5.0"
openssl = "0.10.47"
tokio = { version = "1", features = [ "full" ] }
clap = { version = "4.1.11", features = ["derive", "env"] }
async-trait = "0.1.67"

[lib]
doctest = false
