[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
kld = { path = "../kld" }
anyhow = { version = "1.0.81", features = [ "backtrace" ] }
lightning = { version = "0.0.121", features = [ "max_level_trace" ] }
bitcoin = "0.32.2"
rand = "0.8.5"
reqwest = { version = "0.11", default-features = false, features = [ "blocking", "native-tls" ] }
tokio-postgres = { version = "0.7.9", features = ["runtime", "with-bit-vec-0_6", "with-uuid-0_8"] }
postgres-openssl = "0.5.0"
openssl = "0.10.64"
tokio = { version = "1", features = [ "full" ] }
serde = "1.0"
serde_json = "1.0"
tempfile = "3"

[lib]
doctest = false
