[package]
name = "kld-tui"
version = "0.1.0"
edition = "2021"
description = "A Tui app interacts with kuutamo products"

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.3", features = [ "derive", "env" ] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.30"
human-panic = "1.2.3"
kld = { path = "../kld" }
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.21"
pretty_assertions = "1.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
ratatui = { git = "https://github.com/yanganto/ratatui", branch = "table-footer", version = "0.25.0", features = ["serde", "macros"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.109"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
tokio = { version = "1.35.0", features = ["macros"] }
tokio-util = "0.7.9"
toml = "0.8.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
url = "2.5.0"
